@@ -1,5 +1,6 @@
 KeePassDX(2.9.2)
  * Prevent manual creation of existing field name #718
+ * Harmonization of field names #789
  * Fix search in OTP #780
  * Fix empty OTP field after selection #781
  * Fix same save shared info #783
